Update front matter

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -20,16 +20,17 @@
 
 \title{Towards Practical First-Order Model Counting}
 
-\author{Ananth K. Kidambi}{Indian Institute of Technology Bombay, Mumbai, India}{}{}{TODO: funding}
-\author{Guramrit Singh}{Indian Institute of Technology Bombay, Mumbai, India}{}{}{TODO: funding}
-\author{Paulius Dilkas}{University of Toronto, Toronto, Canada \and Vector Institute, Toronto, Canada}{}{}{TODO: funding}
-\author{Kuldeep S. Meel}{University of Toronto, Toronto, Canada}{}{}{TODO: funding}
+\author{Ananth K. Kidambi}{Indian Institute of Technology Bombay, Mumbai, India}{210051002@iitb.ac.in}{}{TODO: funding}
+\author{Guramrit Singh}{Indian Institute of Technology Bombay, Mumbai, India}{guramrit@iitb.ac.in}{}{TODO: funding}
+\author{Paulius Dilkas}{University of Toronto, Toronto, Canada \and Vector Institute, Toronto, Canada \and \url{https://dilkas.github.io/}}{paulius.dilkas@utoronto.ca}{https://orcid.org/0000-0001-9185-7840}{TODO: funding}
+\author{Kuldeep S. Meel}{University of Toronto, Toronto, Canada \and \url{https://www.cs.toronto.edu/~meel/}}{meel@cs.toronto.edu}{https://orcid.org/0000-0001-9423-5270}{TODO: funding}
 
 \authorrunning{A.\,K. Kidambi, G. Singh, P. Dilkas, and K.\,S. Meel}
-
 \Copyright{Ananth K. Kidambi, Guramrit Singh, Paulius Dilkas, and Kuldeep S. Meel}
 
-\ccsdesc{Computing methodologies~Knowledge representation and reasoning}
+\ccsdesc{Theory of computation~Automated reasoning}
+\ccsdesc{Theory of computation~Logic and verification}
+\ccsdesc{Mathematics of computing~Combinatorics}
 
 \keywords{first-order model counting, knowledge compilation, lifted inference}
 
